--- a/fem1-popov-step-ham/index.html
+++ b/fem1-popov-step-ham/index.html
@@ -10,12 +10,11 @@
 <body>
     <header class="header">
         <div class="header-nav">
-            <div class="container clear-fix">
+            <div class="header-nav-container container">
                 <a href="#" class="header-logo">
                     <span class="header-logo-hexagon">H</span>
                     the<span class="green-text bold-text">Ham</span>
                 </a>
-                <i class="fas fa-search header-search-btn"></i>
                 <nav class="header-menu">
                     <a href="#" class="header-menu-item">home</a>
                     <a href="#" class="header-menu-item">about</a>
@@ -26,15 +25,18 @@
                     <a href="#" class="header-menu-item">blog</a>
                     <a href="#" class="header-menu-item">team</a>
                     <a href="#" class="header-menu-item">contact</a>
+                    <i class="fas fa-search header-menu-item header-search-btn"></i>
                 </nav>
             </div>
         </div>
-        <h1 class="header-title">The Ham is <span class="green-text">Wordpress theme</span></h1>
-        <h2 class="header-title header-slogan">we are creative</h2>
-        <h3 class="header-slogan-subtitle">Just Buy And Enjoy These Awesome Features</h3>
-        <div class="header-btns">
-            <button class="basic-btn">EXPLORE NOW</button>
-            <button class="basic-btn">purchase now</button>
+        <div class="container">
+            <h1 class="header-title">The Ham is <span class="green-text">Wordpress theme</span></h1>
+            <h2 class="header-title header-slogan">we are creative</h2>
+            <h3 class="header-slogan-subtitle">Just Buy And Enjoy These Awesome Features</h3>
+            <div class="header-btns">
+                <button class="basic-btn">EXPLORE NOW</button>
+                <button class="basic-btn">purchase now</button>
+            </div>
         </div>
     </header>
     <section class="advantage">
@@ -90,42 +92,45 @@
                 <li class="works-filter-btn" data-name="wordpress">Wordpress</li>
             </menu>
             <div class="works-content">
-                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design1.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design5.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page3.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design2.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design6.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design7.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design1.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page1.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page2.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design3.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design2.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress4.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress5.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design4.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design5.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design6.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design7.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page7.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress1.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design8.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design9.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design3.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress2.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design5.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress9.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page5.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design6.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design7.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design4.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page4.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress7.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress8.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page6.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress3.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design10.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design11.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design12.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design1.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design2.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design3.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design4.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design5.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design6.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design7.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page1.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page2.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page3.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page4.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page5.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page6.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page7.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress1.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress2.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress3.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress4.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress5.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress6.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress7.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress8.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress9.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress10.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page6.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress3.jpg" alt="poster"></div>
+                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design10.jpg" alt="poster"></div>
                 <div class="works-content-hover">
                     <button class="works-content-hover-btn"><i class="fas fa-link"></i></button>
                     <button class="works-content-hover-btn"><i class="fas fa-search"></i></button>
