--- a/fem1-popov-step-ham/index.html
+++ b/fem1-popov-step-ham/index.html
@@ -29,7 +29,7 @@
                 </nav>
             </div>
         </div>
-        <div class="container">
+        <div class="container header-container">
             <h1 class="header-title">The Ham is <span class="green-text">Wordpress theme</span></h1>
             <h2 class="header-title header-slogan">we are creative</h2>
             <h3 class="header-slogan-subtitle">Just Buy And Enjoy These Awesome Features</h3>
