--- a/fem1-popov-step-ham/index.html
+++ b/fem1-popov-step-ham/index.html
@@ -56,22 +56,22 @@
             <li class="services-menu-btn" data-name="seo-service">Seo Service</li>
         </menu>
         <div class="services-content-wrapper">
-            <p class="services-content clear-fix" data-name="web-design">
+            <p class="services-content clear-fix" data-content="web-design">
                 <img class="services-content-img" src="img/services/web-design.jpg" alt=""> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adip isicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <p class="services-content clear-fix" data-name="graphic-design" style="display: none;">
+            <p class="services-content clear-fix" data-content="graphic-design" style="display: none;">
                 <img class="services-content-img" src="img/services/graphic-design.jpg" alt=""> Fugit simul recteque ne sea, vel ei dolores intellegam. Quodsi appellantur cu his, everti interesset cum ex. Mundi alienum appellantur ius no, ei qui case argumentum vituperatoribus, porro dictas pro id. Sit tota tacimates senserit at, vel inani tempor labores ne. Ius et etiam aliquip suscipit.
             </p>
-            <p class="services-content clear-fix" data-name="online-support" style="display: none;">
+            <p class="services-content clear-fix" data-content="online-support" style="display: none;">
                 <img class="services-content-img" src="img/services/online-support.jpg" alt=""> Te liber assentior eos, qui ne oblique scriptorem. Ex vis nominavi gubergren eloquentiam. Ea usu amet zril interesset, mel melius oporteat antiopam eu, qui ea nulla diceret vivendo. Ut sit paulo noster elaboraret, mollis indoctum cum ex. Vis ne fugit debitis prodesset, et ipsum voluptaria quo. Docendi offendit est ei. Iriure consequat eos ad, cu pri dicunt detraxit perpetua.
             </p>
-            <p class="services-content clear-fix" data-name="app-design" style="display: none;">
+            <p class="services-content clear-fix" data-content="app-design" style="display: none;">
                 <img class="services-content-img" src="img/services/app-design.jpg" alt=""> Eos eu nostrud legimus. In sumo idque accusam sit. Epicuri vivendum accommodare eam ut, eu democritum dissentias scribentur sit. Dico phaedrum nam ea, ei veniam dolore mei.
             </p>
-            <p class="services-content clear-fix" data-name="online-marketing" style="display: none;">
+            <p class="services-content clear-fix" data-content="online-marketing" style="display: none;">
                 <img class="services-content-img" src="img/services/online-marketing.jpg" alt=""> Ei vis maiorum vivendo phaedrum. Ut affert tacimates tractatos vim, ne eos aeque alterum. Nam ut reque partiendo. Ei tota percipit instructior est, ei eum case choro indoctum. Ex augue minimum per, sint quaestio sapientem vim ei.
             </p>
-            <p class="services-content clear-fix" data-name="seo-service" style="display: none;">
+            <p class="services-content clear-fix" data-content="seo-service" style="display: none;">
                 <img class="services-content-img" src="img/services/seo-service.jpg" alt=""> Cicero famously orated against his political opponent Lucius Sergius Catilina. Occasionally the first Oration against Catiline is taken for type specimens: Quo usque tandem abutere, Catilina, patientia nostra? Quam diu etiam furor iste tuus nos eludet? (How long, O Catiline, will you abuse our patience? And for how long will that madness of yours mock us?)
             </p>
         </div>
@@ -128,9 +128,6 @@
                 <div class="works-content-item" data-category="web-design"><img src="img/web-design/web-design1.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress6.jpg" alt="poster"></div>
                 <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress10.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="landing-page"><img src="img/landing-page/landing-page6.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="wordpress"><img src="img/wordpress/wordpress3.jpg" alt="poster"></div>
-                <div class="works-content-item" data-category="graphic-design"><img src="img/graphic-design/graphic-design10.jpg" alt="poster"></div>
                 <div class="works-content-hover">
                     <button class="works-content-hover-btn"><i class="fas fa-link"></i></button>
                     <button class="works-content-hover-btn"><i class="fas fa-search"></i></button>
