--- a/resume/index.html
+++ b/resume/index.html
@@ -17,7 +17,6 @@
             <img class="aside-photo" src="img/photo-card3.jpg" alt="photo"/>
             <h1 class="aside-name">Maksim Popov</h1>
             <h2 class="aside-profession">Front-end Developer</h2>
-
             <div class="aside-info">
                 <li class="aside-info-item"><i class="fas fa-phone"></i>  <a class="aside-info-tel" href="tel:+380676304582">38 (067) 630 45 82</a></li>
                 <li class="aside-info-item"><i class="fas fa-envelope"></i>  <a href="mailto:max.popov.mail@gmail.com">max.popov.mail@gmail.com</a></li>
@@ -84,7 +83,7 @@
                        Git <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                    </li>
                     <li class="skills-item">
-                        Angular.js <div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                        Express <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
                     </li>
                </div>
         </section>
@@ -113,19 +112,22 @@
         <section>
             <h3>Portfolio</h3>
             <li class="summary-item">
-                <a href="http://free-parking.kiev.ua/" target="_blank">Social project "Free Parking"</a> | Full Stack developer
+                <a href="http://free-parking.kiev.ua/" target="_blank">Free Parking</a> | Web-app for social project
             </li>
             <li class="summary-item">
-                <a href="https://maksim-popov.github.io/tanks/" target="_blank">Web game "Tanks"</a> | Front-end developer
+                <a href="https://maksim-popov.github.io/tanks/" target="_blank">Tanks</a> | Web game
             </li>
             <li class="summary-item">
-                <a href="https://maksim-popov.github.io/sapper/" target="_blank">Web game "Sapper"</a> | Front-end developer
+                <a href="https://maksim-popov.github.io/sapper/" target="_blank">Sapper</a> | Web game
             </li>
             <li class="summary-item">
-                <a href="https://maksim-popov.github.io/fem1-popov-step-ham/" target="_blank">Landing page "The Ham" (desktop)</a> | Front-end developer
+                <a href="https://maksim-popov.github.io/fem1-popov-step-ham/" target="_blank">The Ham</a> | Landing page (desktop)
             </li>
             <li class="summary-item">
-                <a href="https://maksim-popov.github.io/pizza/" target="_blank">Landing page "Pizza" (adaptive)</a> | Front-end developer
+                <a href="https://maksim-popov.github.io/pizza/" target="_blank">Pizza</a> | Landing page (adaptive)
+            </li>
+            <li class="summary-item">
+                <a href="https://maksim-popov.github.io/resume/" target="_blank">Notes</a> | Web app
             </li>
         </section>
     </main>
