Add pdf version

--- a/resume/index.html
+++ b/resume/index.html
@@ -22,6 +22,7 @@
                 <li class="aside-info-item"><i class="fas fa-envelope"></i>  <a href="mailto:max.popov.mail@gmail.com">max.popov.mail@gmail.com</a></li>
                 <li class="aside-info-item"><i class="fas fa-globe-americas"></i>  Ukraine, Kyiv</li>
             </div>
+            <a href="CV_Maksim_Popov.pdf" class="aside-link" download>Download PDF</a>
         </div>
     </aside>
     <main>
@@ -50,40 +51,40 @@
             <h3>Tools & Skills</h3>
             <div class="skills-wrapper">
                     <li class="skills-item">
-                        HTML/CSS <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                        <span class="skills-item-title">HTML/CSS</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
                     </li>
                    <li class="skills-item">
-                       Node.js <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                       <span class="skills-item-title">Node.js</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                    </li>
                    <li class="skills-item">
-                       JavaScript <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                       <span class="skills-item-title">JavaScript</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
                    </li>
                    <li class="skills-item">
-                       SQL/NoSQL <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                       <span class="skills-item-title">SQL/NoSQL</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
                    </li>
                     <li class="skills-item">
-                        jQuery <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                        <span class="skills-item-title">jQuery</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
                     </li>
                    <li class="skills-item">
-                       Gulp/Webpack <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                       <span class="skills-item-title">Gulp/Webpack</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
                    </li>
                     <li class="skills-item">
-                        Bootstrap <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                        <span class="skills-item-title">Bootstrap</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
                     </li>
                    <li class="skills-item">
-                       React <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                       <span class="skills-item-title">React</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                    </li>
                     <li class="skills-item">
-                        SASS/SCSS <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                        <span class="skills-item-title">SASS/SCSS</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                     </li>
                     <li class="skills-item">
-                        EJS/JSX <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                        <span class="skills-item-title">EJS/JSX</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                     </li>
                    <li class="skills-item">
-                       Git <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                       <span class="skills-item-title">Git</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
                    </li>
                     <li class="skills-item">
-                        Express <div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                        <span class="skills-item-title">Express</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
                     </li>
                </div>
         </section>
