--- a/resume/index.html
+++ b/resume/index.html
@@ -29,22 +29,22 @@
         <section>
                 <h3>Summary</h3>
             <li class="summary-item">
-                        Know JavaScript, popular frameworks and able to work with it
+                Knowledge of JavaScript, popular libraries and frameworks such as jQuery, Bootstrap, React
             </li>
             <li class="summary-item">
-                        Understand the logic of the client-server architecture in the context of writing real apps
+                Developed Web Interfaces and Web Apps
             </li>
             <li class="summary-item">
-                        Work with the GIT version control system
+                Understanding the logic of the client-server architecture in the context of writing real apps
             </li>
             <li class="summary-item">
-                        Develop Web Interfaces and Web Apps
+                Tested and scaled web applications
             </li>
             <li class="summary-item">
-                        Test and scale web applications
+                Worked with the GIT version control system
             </li>
             <li class="summary-item">
-                        Read someone else's code with an understanding of its work
+                Read someone else's code with an understanding of its work
             </li>
         </section>
         <section>
