--- a/resume/index.html
+++ b/resume/index.html
@@ -94,7 +94,7 @@
                 <span class="timelist-year">2018-today</span>
                 <span class="timelist-text">Full Stack web developer (Freelance)</span>
                 <span class="timelist-year">2017-2018</span>
-                <span class="timelist-text">Design engineer / Microcontroller Software Engineer at project "Robot for cleaning carpets"</span>
+                <span class="timelist-text">Design engineer / Microcontroller Software Engineer (Freelance)</span>
                 <span class="timelist-year">2015-2017</span>
                 <span class="timelist-text">Sound producer at <a href="https://audiojungle.net/user/neymanmusic" target="_blank">Envato Market</a></span>
                 <span class="timelist-year">2012-2015</span>
