--- a/resume/index.html
+++ b/resume/index.html
@@ -128,7 +128,7 @@
                 <a href="https://maksim-popov.github.io/pizza/" target="_blank">Pizza</a> | Landing page (adaptive)
             </li>
             <li class="summary-item">
-                <a href="https://maksim-popov.github.io/resume/" target="_blank">Notes</a> | Web app
+                <a href="http://fem1-step-note.herokuapp.com" target="_blank">Notes</a> | Web app
             </li>
         </section>
     </main>
