--- a/resume/index.html
+++ b/resume/index.html
@@ -43,9 +43,6 @@
             <li class="summary-item">
                 Worked with the GIT version control system
             </li>
-            <li class="summary-item">
-                Read someone else's code with an understanding of its work
-            </li>
         </section>
         <section>
             <h3>Tools & Skills</h3>
@@ -113,22 +110,25 @@
         <section>
             <h3>Portfolio</h3>
             <li class="summary-item">
-                <a href="http://free-parking.kiev.ua/" target="_blank">Free Parking</a> | Web-app for social project
-            </li>
-            <li class="summary-item">
                 <a href="https://maksim-popov.github.io/tanks/" target="_blank">Tanks</a> | Web game
             </li>
             <li class="summary-item">
                 <a href="https://maksim-popov.github.io/sapper/" target="_blank">Sapper</a> | Web game
             </li>
             <li class="summary-item">
-                <a href="https://maksim-popov.github.io/fem1-popov-step-ham/" target="_blank">The Ham</a> | Landing page (desktop)
+                <a href="http://free-parking.kiev.ua/" target="_blank">Free Parking</a> | Web app for social project
+            </li>
+            <li class="summary-item">
+                <a href="http://fem1-step-note.herokuapp.com" target="_blank">Notes</a> | Web app
             </li>
             <li class="summary-item">
                 <a href="https://maksim-popov.github.io/pizza/" target="_blank">Pizza</a> | Landing page (adaptive)
             </li>
             <li class="summary-item">
-                <a href="http://fem1-step-note.herokuapp.com" target="_blank">Notes</a> | Web app
+                <a href="https://maksim-popov.github.io/parallax/" target="_blank">Parallax</a> | Landing page template (desktop)
+            </li>
+            <li class="summary-item">
+                <a href="https://maksim-popov.github.io/fem1-popov-step-ham/" target="_blank">The Ham</a> | Landing page (desktop)
             </li>
         </section>
     </main>
