--- a/resume/index.html
+++ b/resume/index.html
@@ -27,75 +27,106 @@
     </aside>
     <main>
         <section>
-                <h3>Summary</h3>
-            <li class="summary-item">
-                Knowledge of JavaScript, popular libraries and frameworks such as jQuery, Bootstrap, React
+            <h3>Summary</h3>
+            <li class="summary-item list-item">
+                Good knowledge of JavaScript, popular libraries and frameworks such as jQuery, Bootstrap, React.js
             </li>
-            <li class="summary-item">
+            <li class="summary-item list-item">
                 Developed Web Interfaces and Web Apps
             </li>
-            <li class="summary-item">
-                Understanding the logic of the client-server architecture in the context of writing real apps
+            <li class="summary-item list-item">
+                Understanding the logic of the client-server architecture in the context of writing real apps. Knowledge Node.js, Express.js, SQL/NoSQL database
             </li>
-            <li class="summary-item">
+            <li class="summary-item list-item">
                 Tested and scaled web applications
             </li>
-            <li class="summary-item">
-                Worked with the GIT version control system
+            <li class="summary-item list-item">
+                Worked with the GIT version control system and have experience working in a team
             </li>
         </section>
         <section>
             <h3>Tools & Skills</h3>
             <div class="skills-wrapper">
-                    <li class="skills-item">
-                        <span class="skills-item-title">HTML/CSS</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
-                    </li>
-                   <li class="skills-item">
-                       <span class="skills-item-title">Node.js</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
-                   </li>
-                   <li class="skills-item">
-                       <span class="skills-item-title">JavaScript</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
-                   </li>
-                   <li class="skills-item">
-                       <span class="skills-item-title">SQL/NoSQL</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
-                   </li>
-                    <li class="skills-item">
-                        <span class="skills-item-title">jQuery</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
-                    </li>
-                   <li class="skills-item">
-                       <span class="skills-item-title">Gulp/Webpack</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
-                   </li>
-                    <li class="skills-item">
-                        <span class="skills-item-title">Bootstrap</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
-                    </li>
-                   <li class="skills-item">
-                       <span class="skills-item-title">React</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
-                   </li>
-                    <li class="skills-item">
-                        <span class="skills-item-title">SASS/SCSS</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
-                    </li>
-                    <li class="skills-item">
-                        <span class="skills-item-title">EJS/JSX</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
-                    </li>
-                   <li class="skills-item">
-                       <span class="skills-item-title">Git</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
-                   </li>
-                    <li class="skills-item">
-                        <span class="skills-item-title">Express</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
-                    </li>
-               </div>
+                <li class="skills-item">
+                    <span class="skills-item-title">HTML/CSS</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">JavaScript</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">jQuery</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">Bootstrap</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">Git</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">SASS/SCSS</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">Node.js</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">Gulp/Webpack</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">React</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">Express.js</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">EJS/JSX</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-title">SQL/NoSQL</span><div class="p-b"></div><div class="p-b"></div><div class="p-b"></div><div class="p-b p-b-e"></div><div class="p-b p-b-e"></div>
+                </li>
+            </div>
+        </section>
+        <section>
+            <h3>Projects</h3>
+            <li class="project-item list-item">
+                <a href="https://maksim-popov.github.io/tanks/" target="_blank">Tanks</a> - Web Game
+                <p class="project-item-desc">Developed the basis for the game "tanks" in accordance with ECMAScript 6. The OOP concept was used to build the application logic.</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="https://maksim-popov.github.io/sapper/" target="_blank">Sapper</a> - Web Game
+                <p class="project-item-desc">This application is written in a functional style using recursive calls.</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="http://free-parking.kiev.ua/" target="_blank">Free Parking</a> - Web App for social project
+                <p class="project-item-desc">Created a back-end in php and used a MySQL database to run the voting application</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="http://fem1-step-note.herokuapp.com" target="_blank">Notes</a> - Web App
+                <p class="project-item-desc">Team work experience. Developed an application on Node.js (Back-end + Front-end) using MongoDB and heroku server</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="https://maksim-popov.github.io/pizza/" target="_blank">Pizza</a> - Landing Page (adaptive)
+                <p class="project-item-desc">Experience with using psd-layouts and Pixel Perfect technique.</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="https://maksim-popov.github.io/parallax/" target="_blank">Parallax</a> - Landing Page template (desktop)
+                <p class="project-item-desc">Mastered the parallax effect in CSS</p>
+            </li>
+            <li class="project-item list-item">
+                <a href="https://maksim-popov.github.io/fem1-popov-step-ham/" target="_blank">The Ham</a> - Landing Page (desktop)
+                <p class="project-item-desc">Developed frequently used functions in landing pages such as slider, tabs and filters. Practiced jQuery.</p>
+            </li>
         </section>
         <section>
             <h3>Experience</h3>
             <div class="timelist">
                 <span class="timelist-year">2018-today</span>
-                <span class="timelist-text">Full Stack web developer (Freelance)</span>
+                <span class="timelist-text">Front-End Developer (Freelance)</span>
                 <span class="timelist-year">2017-2018</span>
-                <span class="timelist-text">Design engineer / Microcontroller Software Engineer (Freelance)</span>
+                <span class="timelist-text">Embedded Software Engineer (Freelance)</span>
                 <span class="timelist-year">2015-2017</span>
-                <span class="timelist-text">Sound producer at <a href="https://audiojungle.net/user/neymanmusic" target="_blank">Envato Market</a></span>
+                <span class="timelist-text">Sound Producer at <a href="https://audiojungle.net/user/neymanmusic" target="_blank">Envato Market</a></span>
                 <span class="timelist-year">2012-2015</span>
-                <span class="timelist-text">Sound engineer at recording studio <a href="http://www.bestrecords.kiev.ua/" target="_blank">bestRECords</a></span>
+                <span class="timelist-text">Sound Engineer at recording studio <a href="http://www.bestrecords.kiev.ua/" target="_blank">bestRECords</a></span>
             </div>
         </section>
         <section>
@@ -106,30 +137,6 @@
                    <span class="timelist-year">2007-2012</span>
                    <span class="timelist-text">Kryvyi Rih National University, Mining faculty, Mine surveying</span>
                </div>
-        </section>
-        <section>
-            <h3>Portfolio</h3>
-            <li class="summary-item">
-                <a href="https://maksim-popov.github.io/tanks/" target="_blank">Tanks</a> | Web game
-            </li>
-            <li class="summary-item">
-                <a href="https://maksim-popov.github.io/sapper/" target="_blank">Sapper</a> | Web game
-            </li>
-            <li class="summary-item">
-                <a href="http://free-parking.kiev.ua/" target="_blank">Free Parking</a> | Web app for social project
-            </li>
-            <li class="summary-item">
-                <a href="http://fem1-step-note.herokuapp.com" target="_blank">Notes</a> | Web app
-            </li>
-            <li class="summary-item">
-                <a href="https://maksim-popov.github.io/pizza/" target="_blank">Pizza</a> | Landing page (adaptive)
-            </li>
-            <li class="summary-item">
-                <a href="https://maksim-popov.github.io/parallax/" target="_blank">Parallax</a> | Landing page template (desktop)
-            </li>
-            <li class="summary-item">
-                <a href="https://maksim-popov.github.io/fem1-popov-step-ham/" target="_blank">The Ham</a> | Landing page (desktop)
-            </li>
         </section>
     </main>
 </div>
